@@ -3,6 +3,8 @@
 	* tkchat.tcl: A number of themeing cleanups. Added a statusbar and
 	hooked in some connection status and SSL certificate dialog. Show
 	geturl progress during history loading.
+	(::tkchat::ShowCertificate): It seems some versions of tls/openssl
+	use a different delimiter for the certificate records.
 
 2007-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
